--- a/iOSBase/Base.lproj/LaunchScreen.storyboard
+++ b/iOSBase/Base.lproj/LaunchScreen.storyboard
@@ -20,12 +20,26 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guide_bg" translatesAutoresizingMaskIntoConstraints="NO" id="Qok-sA-5iV">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Qok-sA-5iV" secondAttribute="trailing" id="BIl-3W-XNV"/>
+                            <constraint firstItem="zHb-R9-vzd" firstAttribute="top" secondItem="Qok-sA-5iV" secondAttribute="bottom" id="e3C-uJ-2rm"/>
+                            <constraint firstItem="Qok-sA-5iV" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mpM-WY-UWr"/>
+                            <constraint firstItem="Qok-sA-5iV" firstAttribute="top" secondItem="0tI-vE-NkW" secondAttribute="bottom" constant="-20" id="zNs-hR-YuO"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="guide_bg" width="1080" height="1920"/>
+    </resources>
 </document>
