--- a/iOSBase/Modules/Login/Controllers/LoginViewController.xib
+++ b/iOSBase/Modules/Login/Controllers/LoginViewController.xib
@@ -101,7 +101,7 @@
                         <action selector="toRegisterVC:" destination="-1" eventType="touchUpInside" id="ouy-5l-hQ8"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-t4-bDo">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-t4-bDo">
                     <rect key="frame" x="309" y="260" width="54" height="28"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <state key="normal" title="忘记密码">
