--- a/iOSBase/Modules/Mine/Controllers/EditLoginPwdViewController.xib
+++ b/iOSBase/Modules/Mine/Controllers/EditLoginPwdViewController.xib
@@ -11,6 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditLoginPwdViewController">
             <connections>
+                <outlet property="oldText" destination="rSg-mb-MKF" id="ciz-Tu-dd7"/>
+                <outlet property="passwardNew" destination="zXm-fr-Li6" id="jHa-cD-Vz7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -103,6 +105,9 @@
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="toEditCentainAction:" destination="-1" eventType="touchUpInside" id="o0x-P0-LT9"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQU-5I-kqh">
                     <rect key="frame" x="309" y="209" width="54" height="28"/>
